# sparql-rdfs-rewriter

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: example.ttl  example_rewrite.py
sparql_rdfs_rewriter/: __init__.py  parser.py  rewriter.py
