[project]
name = "sparql-rdfs-rewriter"
version = "0.1"
description = "sparql-rdfs-rewriter. A lightweight Python library for SPARQL algebra–level query rewriting, implementing RDFS entailment (subclass, subproperty, domain) on RDFLib. Designed for dynamic DL-Lite–style systems, it expands queries on-the-fly without materializing triples."
requires-python = ">=3.8"
dependencies = [
"rdflib>=6.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sparql_rdfs_rewriter", "sparql_rdfs_rewriter.*"]
